--- a/main.tex
+++ b/main.tex
@@ -44,6 +44,8 @@
 \input{sections/resumen.tex}
 \input{sections/objetivos.tex}
 \input{sections/actividades.tex}
+\input{sections/diseño.tex}
+\input{sections/Marco Teorico.tex}
 \input{sections/bitacora.tex}
 
 \input{sections/apendice.tex}
