--- a/sections/cronograma.tex
+++ b/sections/cronograma.tex
@@ -1,6 +1,7 @@
 \section{Cronograma}
-El proyecto se desarrollará en siete (7) meses. A continuación, se presenta un esquema de las tareas realizadas y por realizar 
-junto a sus tiempos correspondientes.
+El proyecto se desarrolló en siete (7) meses.
+A continuación, se presenta un esquema con los tiempos plantedos al comienzo del proyecto,
+y coloreados según el porcentaje completado de cada tarea, para corroborar que los tiempos estimados fueron los correctos.
 \begin{figure}[H]
     \begin{center}
         \begin{ganttchart}[y unit title=0.8cm,
@@ -30,9 +31,9 @@ junto a sus tiempos correspondientes.
             %tareas
             \ganttbar[progress=100]{Diseño e investigación}{1}{10} \\
             \ganttbar[progress=100]{Informe parcial}{9}{11} \\
-            \ganttbar[progress=0]{Implementación}{11}{18} \\
-            \ganttbar[progress=0]{Validación}{16}{21} \\
-            \ganttbar[progress=0]{Informe final}{21}{28}
+            \ganttbar[progress=85]{Implementación}{11}{18} \\
+            \ganttbar[progress=85]{Validación}{16}{21} \\
+            \ganttbar[progress=40]{Informe final}{21}{28}
 
         \end{ganttchart}
     \end{center}
