Primera versión PP

--- a/main.tex
+++ b/main.tex
@@ -43,13 +43,17 @@
 
 \input{sections/resumen.tex}
 \input{sections/objetivos.tex}
+\input{sections/objetivo minimo.tex}
 \input{sections/actividades.tex}
 \input{sections/diseño.tex}
 \input{sections/Marco Teorico.tex}
+\input{sections/driver.tex}
+\input{sections/implementacion.tex}
+\input{sections/PCB.tex}
+\input{sections/simulaciones.tex}
 \input{sections/bitacora.tex}
-
 \input{sections/apendice.tex}
-
+\input{sections/conclusiones.tex}
 \newpage
 \printbibliography
 
