--- a/sections/bitacora.tex
+++ b/sections/bitacora.tex
@@ -3,3 +3,10 @@
 Una incorrecta elección de Rt y Ct fuera de los valores recomendados generaba variaciones muy grandes de la frecuencia de switching, 
 lo cual causaba inestabilidad en la tensión de salida. 
 
+Con un medidor de inductancia se obtuvo el valor de la inductancia de magnetización del transformador.
+Con los extremos de un bobinado a circuito abierto, se realizó la conexión del otro bobinado al instrumento y se obtuvo:
+Transformador de señal E25:
+Lm=0.186mH; 
+Transformador E70
+Lm=;    
+
