--- a/sections/simulaciones.tex
+++ b/sections/simulaciones.tex
@@ -7,7 +7,7 @@ TL494
 Se toma la salida por el colector de los transistores del circuito integrado. 
 Su forma de onda son pulsos rectangulares. 
 Amplitud: 0V a Vdrv dados por la tensión de alimentación.
-Frecuencia de 125kHz dada por el capacitor Ct=1nF y Rt=8kΩ mediante el potenciómetro. 
+Frecuencia de 125kHz dada por el capacitor Ct=1nF y $Rt=8k\Omega$ mediante el potenciómetro. 
 Tiempo de encendido: permite controlar el ciclo de trabajo mediante un potenciómetro. 
 Esta señal se mide en 3 condiciones diferentes: 
 A) Sin el convertidor forward conectado
@@ -73,10 +73,14 @@ Convertidor Forward Doble Switch
 
 5) Corriente en el primario
 
+Medir la componente continua. 
+
 6) Caída de tensión en los diodos
 
 7) Corriente en el inductor junto con su ripple
 
 8) Corriente de salida junto con su ripple 
+
+Idealmente medir 1A-1.6A del modo elegido. 
 
 9) Tensión de salida junto con su ripple 
